k8s-apps/zen_ecommerce/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zen-ecommerce-backend
  namespace: zen-ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zen-ecommerce-backend
  template:
    metadata:
      labels:
        app: zen-ecommerce-backend
    spec:
      containers:
      - name: backend
        image: zaid/zen-ecommerce-backend:8a6ec42f544990b4b1240870714b9d1ffa0dd6ff
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
