k8s-apps/zen_ecommerce/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zen-ecommerce-frontend
  namespace: zen-ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zen-ecommerce-frontend
  template:
    metadata:
      labels:
        app: zen-ecommerce-frontend
    spec:
      containers:
      - name: frontend
        image: zaid/zen-ecommerce-frontend:cb8e914036454022b04cc76528ba493893b8cd08
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
