k8s-apps/zen_ecommerce/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: db
  namespace: zen-ecommerce

spec:
  serviceName: db

  replicas: 1

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
      - name: postgres

        image: postgres:16

        ports:
        - containerPort: 5432

        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
  - metadata:
      name: postgres-storage

    spec:
      accessModes:
      - ReadWriteOnce

      storageClassName: local-path

      resources:
        requests:
          storage: 10Gi
