k8s-apps/zen_ecommerce/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zen-ecommerce-backend-service
  namespace: zen-ecommerce
spec:
  selector:
    app: zen-ecommerce-backend
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
