k8s-apps/zen_ecommerce/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zen-ecommerce-frontend-service
  namespace: zen-ecommerce
spec:
  selector:
    app: zen-ecommerce-frontend
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
