k8s-apps/zen_ecommerce/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: zen-ecommerce
spec:
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 5432
