k8s-apps/zen_ecommerce/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zen-ecommerce-service
  namespace: zen-ecommerce
spec:
  type: ClusterIP
  selector:
    app: zen-ecommerce
  ports:
    - port: 3000
      targetPort: 3000
