k8s-apps/zen_ecommerce/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zen-ecommerce-ingress
  namespace: zen-ecommerce
spec:
  ingressClassName: traefik
  rules:
  - host: zen.lab
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: zen-ecommerce-backend-service
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zen-ecommerce-frontend-service
            port:
              number: 3000

  - host: api.zen.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zen-ecommerce-backend-service
            port:
              number: 8000
